ThrustIdx derived record selection, recsel, data now matching the old SequenceNPY, but still OpenGL ignoring the change, investigate Thrust OpenGL Interop in throgl-

--- a/graphics/ggeoview/CMakeLists.txt
+++ b/graphics/ggeoview/CMakeLists.txt
@@ -166,6 +166,7 @@ message("CUDA_GENERATED_OUTPUT_DIR:" ${CUDA_GENERATED_OUTPUT_DIR})
 
 add_optix_executable( ${name} 
       main.cc 
+      CUDAInterop.cc
       index.cu
 
       cu/pinhole_camera.cu
