override material indices to place important ones into 1-15 for 4-bit sequencing

--- a/numerics/npy/CMakeLists.txt
+++ b/numerics/npy/CMakeLists.txt
@@ -50,7 +50,7 @@ add_library( ${name}  SHARED
     RecordsNPY.cpp
     BoundariesNPY.cpp
     SequenceNPY.cpp
-    CountsNPY.cpp
+    Counts.cpp
     Types.cpp
     Index.cpp
 )
@@ -78,7 +78,7 @@ PhotonsNPY.hpp
 RecordsNPY.hpp
 BoundariesNPY.hpp
 SequenceNPY.hpp
-CountsNPY.hpp
+Counts.hpp
 numpy.hpp
 stringutil.hpp
 jsonutil.hpp
