--- a/numerics/npy/CMakeLists.txt
+++ b/numerics/npy/CMakeLists.txt
@@ -51,6 +51,7 @@ add_library( ${name}  SHARED
     RecordsNPY.cpp
     BoundariesNPY.cpp
     SequenceNPY.cpp
+    AxisNPY.cpp
     Counts.cpp
     Types.cpp
     Index.cpp
@@ -80,6 +81,7 @@ PhotonsNPY.hpp
 RecordsNPY.hpp
 BoundariesNPY.hpp
 SequenceNPY.hpp
+AxisNPY.hpp
 Counts.hpp
 numpy.hpp
 stringutil.hpp
