propagate level transforms from AssimpWrap/AssimpNode into GGeo and check the product of level transforms matches the global transform in GTreeCheck

--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -80,6 +80,7 @@ add_library(${name} SHARED
                 GColorMap.cc
                 GTraverse.cc
                 GColorizer.cc
+                GTreeCheck.cc
 )
 
 SET(hdrs 
@@ -117,6 +118,7 @@ GColors.hh
 GColorMap.hh
 GTraverse.hh
 GColorizer.hh
+GTreeCheck.hh
 )
 
 target_link_libraries(${name} ${LIBRARIES})
