split unweildy GGeoView main into methods of an App class

--- a/graphics/glfw/glfwminimal/CMakeLists.txt
+++ b/graphics/glfw/glfwminimal/CMakeLists.txt
@@ -15,26 +15,33 @@ find_package(GLEW REQUIRED)
 find_package(GLFW REQUIRED)
 find_library(OpenGL_LIBRARY NAMES GL )
 
-include_directories(
+
+set(INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${GLEW_INCLUDE_DIRS} 
    ${GLFW_INCLUDE_DIRS} 
 )
 
-add_definitions(
+set(DEFINITIONS
    ${GLEW_DEFINITIONS}
    ${GLFW_DEFINITIONS}
 )
 
-add_executable( ${name} glfwminimal.cc ) 
-
-target_link_libraries( ${name} 
+set(LIBRARIES
       ${GLEW_LIBRARIES}
       ${GLFW_LIBRARIES}
       ${OpenGL_LIBRARY}
 )
 
+include_directories( ${INCLUDE_DIRS} )
+
+add_definitions( ${DEFINITIONS} )
+
+add_executable( ${name} glfwminimal.cc ) 
+
+target_link_libraries( ${name} ${LIBRARIES})
+
 install(TARGETS ${name} DESTINATION bin)
 
-
+add_subdirectory(tests)
 
