give up on 3-way OpenGL/OptiX/Thrust interop, but even descoping to 2-way OpenGL/OptiX OpenGL/Thrust run into sync flakiness between OpenGL and Thrust

--- a/optix/gloptixthrust/CMakeLists.txt
+++ b/optix/gloptixthrust/CMakeLists.txt
@@ -71,8 +71,10 @@ message("CUDA_GENERATED_OUTPUT_DIR:" ${CUDA_GENERATED_OUTPUT_DIR})
 
 optixthrust_add_executable( ${name} 
       main.cpp
-      gloptixthrust.cpp
-      gloptixthrust_postprocess.cu     
+      OBuffer.cc
+      OBuffer_.cu
+      TAry.cc
+      TAry_.cu
 
       cu/circle.cu
 
