find that cuda functions and kernel calls succeed to OpenGL interop, Thrust appears to run OK but results do not get back into OpenGL buffers

--- a/optix/gloptixthrust/CMakeLists.txt
+++ b/optix/gloptixthrust/CMakeLists.txt
@@ -73,6 +73,8 @@ optixthrust_add_executable( ${name}
       main.cpp
       OBuffer.cc
       OBuffer_.cu
+      CResource.cc
+      CResource_.cu
       TAry.cc
       TAry_.cu
 
