resolved OpenGL/Thrust interop problems : a mis-understanding regarding the action of the thrust::device_vector ctor from thrust::device_pointer

--- a/optix/gloptixthrust/CMakeLists.txt
+++ b/optix/gloptixthrust/CMakeLists.txt
@@ -77,6 +77,8 @@ optixthrust_add_executable( ${name}
       CResource_.cu
       TAry.cc
       TAry_.cu
+      TProc.cc
+      TProc_.cu
 
       cu/circle.cu
 
