optixthrust- demo code for photon (4*float4) stream compaction operational using copy_if and strided_range repeated_range iterators

--- a/optix/optixthrust/CMakeLists.txt
+++ b/optix/optixthrust/CMakeLists.txt
@@ -63,8 +63,11 @@ optixthrust_add_executable( ${name}
       optixthrust.cpp
       optixthrust_.cu     
       cu/minimal_float4.cu
-      OPTIONS -arch sm_30 
+      OPTIONS 
+       -arch sm_30
 ) 
+
+
 
 install(TARGETS ${name} DESTINATION bin)
 
