template class machinery for typed/strided dumping of OptiX buffers using Thrust, move non type specifics to OBufBase

--- a/numerics/thrustrap/CMakeLists.txt
+++ b/numerics/thrustrap/CMakeLists.txt
@@ -63,6 +63,7 @@ SET(hdrs
   ThrustHistogram.hh
   ThrustHistogramImp.h
   ThrustArrayImp.h
+  strided_range.h 
 )
 install(TARGETS ${name} DESTINATION lib)
 install(FILES ${hdrs} DESTINATION include)
