simplify NPY buffer creation by removal of some static make methods like make_vec4

--- a/numerics/thrustrap/CMakeLists.txt
+++ b/numerics/thrustrap/CMakeLists.txt
@@ -64,6 +64,7 @@ SET(hdrs
   ThrustHistogramImp.h
   ThrustArrayImp.h
   strided_range.h 
+  iexpand.h 
 )
 install(TARGETS ${name} DESTINATION lib)
 install(FILES ${hdrs} DESTINATION include)
